# vatican

./: .gitignore  BUBS.hs  DeBruijn.hs  Depth.hs  HOAS.hs  IORefRef.hs  IndirRef.hs  InterpreterStack.hs  Main.hs  Makefile  Naive.hs  Parser.hs  README  Reference.hs  Thyer.hs  Vatican.hs  bubs.cpp  interp.cpp  interp.hs  interps.pul  measure.pl  repl.hs  sinot.hs  vatican  vatican.cabal  vatican.cpp  vatican.h  view.pl
Runtime/: BUBS.hs  Naive.hs  Reference.hs  Thyer.hs
haskell-prototype/: BUBS.hs  DeBruijn.hs  Depth.hs  HOAS.hs  Naive.hs  README  Thyer.hs  vatican.cabal
vm/: GC.cpp  GC.h  Makefile  NOTES  NOTES.mkd  Vatican.cpp  Vatican.h  main.cpp  run_tests.zsh  valgrind.supp
