Name:                vatican
Version:             0.1
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.2

Executable vatican
  Build-depends: base >= 4, containers, process, transformers, value-supply
  Main-is: InterpreterStack.hs
  GHC-options: -O
  Other-modules: BUBS, DeBruijn, Depth, HOAS, IORefRef, Naive, Reference, Thyer

